2012-04-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php: into the function
	"events_validate_event" fixed the return false when fail validation.
	
	* include/functions_network_components.php: fixed the includes.
	
	* operation/agentes/exportdata.php: cleaned source code style.
	
	* include/functions_api.php: fixed the checking error to healty
	level into the function "get_events".

2012-04-27  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/alerts/alerts_list.list.php: Fixed: Action filter
	don't show right actions group.

2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora.css
	 include/javascript/jquery.pandora.js
	 general/login_help_dialog.php: Added input for license in blocking
	 license modal windows.

2012-04-26  Sancho lerena

	* operation/agentes/networkmap.php: Wider field for network map name.

2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup.php: Check for update manager installed in 
	this view.

2012-04-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/exportdata.php,
	operation/events/events_list.php: cleaned source code style.
	
	* include/functions_events.php,
	include/functions_network_components.php,
	include/functions_api.php: fixed some things, the function
	"events_validate_event" when can't update as validate any event
	return false, into the file "functions_network_components" added
	$config['homedir'] for situations where include in a other path that
	index. And show error when make a bad validate event.

2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora_forms.css
	 include/functions_themes.php: Removed bad Css files from visual 
	 styles.

2012-04-26  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_filemanager.php: Changed all messages.

2012-04-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/javascript/jquery.pandora.js: Fixed modal windows in IE.
	
	Fixes: #3521410
